--- a/navrang-component-library/package.json
+++ b/navrang-component-library/package.json
@@ -20,18 +20,20 @@
         "@types/react-dom": "^18.2.4",
         "bootstrap": "^5.3.0-alpha3",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "typescript": "^4.5.4"
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
         "@babel/core": "^7.22.5",
         "@babel/preset-env": "^7.22.5",
         "@babel/preset-react": "^7.22.5",
+        "@rollup/plugin-typescript": "^11.1.1",
         "react-scripts": "5.0.1",
         "rollup": "^2.79.1",
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-node-resolve": "^5.2.0",
+        "tslib": "^2.5.3",
+        "typescript": "^5.1.3",
         "web-vitals": "^2.1.4"
     },
     "peerDependencies": {
