--- a/navrang/package.json
+++ b/navrang/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "navrang-component-library",
+    "name": "navrang",
     "version": "0.1.0",
-    "main": "dist/index.js",
+    "main": "dist/bundle.js",
     "files": [
         "dist",
         "src"
