make the imports from sub folders

--- a/navrang/package.json
+++ b/navrang/package.json
@@ -1,7 +1,12 @@
 {
     "name": "navrang",
     "version": "0.1.0",
-    "main": "dist/bundle.js",
+    "main": "dist/index.js",
+    "exports": {
+        ".": "./dist/index.js",
+        "./context": "./dist/context/context/index.js",
+        "./controls": "./dist/controls/controls/index.js"
+    },
     "files": [
         "dist",
         "src"
@@ -39,5 +44,17 @@
     "peerDependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
