--- a/navrang/package.json
+++ b/navrang/package.json
@@ -21,9 +21,12 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@types/loglevel": "^1.6.3",
         "@types/react": "^18.2.6",
         "@types/react-dom": "^18.2.4",
         "bootstrap": "^5.3.0-alpha3",
+        "lodash": "^4.17.21",
+        "loglevel": "^1.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
@@ -32,13 +35,14 @@
         "@babel/preset-env": "^7.22.5",
         "@babel/preset-react": "^7.22.5",
         "@rollup/plugin-typescript": "^11.1.1",
+        "@types/lodash": "^4.14.195",
         "react-scripts": "5.0.1",
         "rollup": "^2.79.1",
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-node-resolve": "^5.2.0",
         "tslib": "^2.5.3",
-        "typescript": "^5.1.3",
+        "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
     },
     "peerDependencies": {
