--- a/demo-project/package.json
+++ b/demo-project/package.json
@@ -7,6 +7,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/lodash": "^4.14.195",
+        "@types/loglevel": "^1.6.3",
         "@types/node": "^20.3.1",
         "@types/react": "^18.2.12",
         "@types/react-dom": "^18.2.5",
@@ -15,6 +16,7 @@
         "immer": "^10.0.2",
         "json-server": "^0.17.3",
         "lodash": "^4.17.21",
+        "loglevel": "^1.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
