--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/node": "^20.3.1",
         "@types/react": "^18.2.12",
         "@types/react-dom": "^18.2.5",
+        "@types/yup": "^0.32.0",
         "axios": "^1.4.0",
         "bootstrap": "^5.3.0",
         "immer": "^10.0.2",
@@ -22,7 +23,8 @@
         "react-scripts": "5.0.1",
         "typescript": "^4.8.4",
         "use-immer": "^0.9.0",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "yup": "^1.2.0"
     },
     "scripts": {
         "start": "react-scripts start",
