--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "axios": "^1.4.0",
         "bootstrap": "^5.3.0",
         "bootstrap-icons": "^1.10.5",
+        "dotenv": "^16.3.0",
         "immer": "^10.0.2",
         "json-server": "^0.17.3",
         "lodash": "^4.17.21",
